# ui-e2e-playwright-pytest

./: .gitignore  LICENSE  pyproject.toml  pytest.ini
scripts/: report.ps1  smoke.ps1  trace-last.ps1
src/ui_e2e/: config.py
src/ui_e2e/pages/: base_page.py  cart_page.py  checkout_complete_page.py  checkout_info_page.py  checkout_overview_page.py  inventory_page.py  login_page.py
src/ui_e2e_playwright_pytest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auth.py  test_cart.py  test_checkout_e2e.py  test_sorting.py
