[project]
name = "ui-e2e-playwright-pytest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "playwright>=1.42.0",
  "pytest-playwright>=0.4.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]